--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@babel/core": "^7.23.5",
     "@babel/preset-env": "^7.23.5",
     "babel-jest": "^29.7.0",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.4",
     "jest": "^29.7.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
