--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.7.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
