--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.57.0",
     "html-webpack-plugin": "^5.5.4",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.8.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
