--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest",
     "build": "webpack",
     "server": "webpack serve --no-hot"
+    "page" : "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
